--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -44,15 +44,15 @@ jobs:
     - name: who-am-i action
       uses: microsoft/powerplatform-actions/who-am-i@0.4.0
       with:
-        environment-url: ${{https://org048fcc6d.crm7.dynamics.com}}
-        user-name: ${{victorwujob@victorwujob.onmicrosoft.com}}
+        environment-url: ${{env.https://org048fcc6d.crm7.dynamics.com}}
+        user-name: ${{env.victorwujob@victorwujob.onmicrosoft.com}}
         password-secret: ${{ secrets.password }}
 
     - name: export-solution action
       uses: microsoft/powerplatform-actions/export-solution@0.4.0
       with:
-        environment-url: ${{https://org048fcc6d.crm7.dynamics.com/}}
-        user-name: ${{victorwujob@victorwujob.onmicrosoft.com}}
+        environment-url: ${{env.https://org048fcc6d.crm7.dynamics.com/}}
+        user-name: ${{env.victorwujob@victorwujob.onmicrosoft.com}}
         password-secret: ${{ secrets.password }}
         solution-name: ${{ github.event.inputs.solution_name }}
         solution-output-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
