--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -26,7 +26,7 @@ on:
 
 env:
 #edit your values here
-  ENVIRONMENT_URL: <https://org048fcc6d.crm7.dynamics.com>
+  ENVIRONMENT_URL: <https://org9f6cb231.crm7.dynamics.com>
   USERNAME: <victorwujob@victorwujob.onmicrosoft.com>
 
 
